nginx/k8s/nginx-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tcp-np
spec:
  type: NodePort
  selector:
    app: crystal-mev
    comp: nginx-pod
  ports:
  - port: 80
    targetPort: 80
